--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           </div>
 
           <!----------- Social Links Section ---------->
-<div align="center" style="padding: 10px 0px; background-color: #fbbc05">
+<div align="center" style="padding: 10px 0px; background-color: #e5eaf5">
   <div style="display: table; max-width:244px;">
     <table align="left" border="0" cellspacing="0" cellpadding="0" width="32" height="32" style="width: 32px !important;height: 32px !important;display: inline-block;border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;margin-right: 17px">
       <tbody>
